.opsera-clarity-1/k8s/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-clarity-1-staging
  labels:
    app: clarity-1
    environment: staging
    tenant: opsera
    managed-by: argocd
