.opsera-clarity-1/k8s/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clarity-1
  namespace: opsera-clarity-1-staging
  labels:
    app: clarity-1
    environment: staging
    tenant: opsera
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: clarity-1-staging.agent.opsera.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clarity-1
                port:
                  number: 80
